--- a/app/views/accredited-bodies/permissions.njk
+++ b/app/views/accredited-bodies/permissions.njk
@@ -31,6 +31,7 @@
 
       {% set headingHtml %}
         {% include "_includes/page-heading.njk" %}
+        <p class="govuk-body">You can give {{ accreditedBody.name }} permission to make changes to your courses in their account.</p>
       {% endset %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
