--- a/app/views/partners/courses/description.njk
+++ b/app/views/partners/courses/description.njk
@@ -72,7 +72,7 @@
                   visuallyHiddenText: "about this course"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -90,7 +90,7 @@
                   visuallyHiddenText: "interview process"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -108,7 +108,7 @@
                   visuallyHiddenText: "how school placements work"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           }
         ]
       }) }}
@@ -147,7 +147,7 @@
                   visuallyHiddenText: "course length"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -165,7 +165,7 @@
                   visuallyHiddenText: "fee for UK student"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -183,7 +183,7 @@
                   visuallyHiddenText: "fee for international students"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -201,7 +201,7 @@
                   visuallyHiddenText: "fee details"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -219,7 +219,7 @@
                   visuallyHiddenText: "financial support you offer"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           }
         ]
       }) }}
@@ -262,7 +262,7 @@
                   visuallyHiddenText: "degree"
                 } if 1 == 0
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -282,7 +282,7 @@
                   visuallyHiddenText: "GCSEs"
                 } if 1 == 0
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -300,7 +300,7 @@
                   visuallyHiddenText: "personal qualities"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           },
           {
             key: {
@@ -318,7 +318,7 @@
                   visuallyHiddenText: "other requirements"
                 }
               ]
-            } if permissions and "change_courses" in permissions
+            } if permissions and ("add_courses" in permissions or "change_courses" in permissions)
           }
         ]
       }) }}
