Change message to 'None - view only'

--- a/app/views/accredited-bodies/check-your-answers.njk
+++ b/app/views/accredited-bodies/check-your-answers.njk
@@ -37,7 +37,7 @@
               {% endfor %}
             </ul>
           {% else %}
-            <p class="govuk-body">View only</p>
+            <p class="govuk-body">None - view only</p>
           {% endif %}
         {% endset %}
 
