Rename edit vacancies to change vacancies

--- a/app/views/partners/courses/_actions.njk
+++ b/app/views/partners/courses/_actions.njk
@@ -16,7 +16,7 @@
   <div class="govuk-button-group">
     <a class="govuk-link govuk-!-margin-right-2" href="#">View on Find</a>
     {% if permissions and "change_course_vacancies" in permissions %}
-      <a class="govuk-link govuk-!-margin-right-2" href="#">Edit vacancies</a>
+      <a class="govuk-link govuk-!-margin-right-2" href="#">Change vacancies</a>
     {% endif %}
     {% if permissions and "withdraw_courses" in permissions %}
       <a class="govuk-link app-link--destructive" href="#">Withdraw course</a>
