--- a/app/views/partners/courses/list.njk
+++ b/app/views/partners/courses/list.njk
@@ -84,7 +84,7 @@
                 <td class="govuk-table__cell">
                   {% if course.status == 1 %}
                     {% if permissions and "change_course_vacancies" in permissions %}
-                      Yes (<a class="govuk-link" href="#">Edit<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
+                      Yes (<a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
                     {% else %}
                       Yes
                     {% endif %}
