--- a/app/views/users/delete.njk
+++ b/app/views/users/delete.njk
@@ -27,6 +27,11 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
+        {{ govukWarningText({
+          text: "The user will be sent an email to tell them that you removed them from the organisation.",
+          iconFallbackText: "Warning"
+        }) }}
+
         {{ govukButton({
           text: "Delete user",
           classes: "govuk-button--warning"
