--- a/app/views/users/check-your-answers.njk
+++ b/app/views/users/check-your-answers.njk
@@ -84,7 +84,7 @@
         }) }}
 
         {{ govukWarningText({
-          text: "The user will be sent an email to tell them that you’ve added them to the organisation",
+          text: "The user will be sent an email to tell them you’ve added them to the organisation",
           iconFallbackText: "Warning"
         }) }}
 
