removed the word 'that'

--- a/app/views/users/delete.njk
+++ b/app/views/users/delete.njk
@@ -28,7 +28,7 @@
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
         {{ govukWarningText({
-          text: "The user will be sent an email to tell them that you removed them from the organisation.",
+          text: "The user will be sent an email to tell them you removed them from the organisation.",
           iconFallbackText: "Warning"
         }) }}
 
