Change delete to remove

--- a/app/views/users/details.njk
+++ b/app/views/users/details.njk
@@ -48,7 +48,7 @@
 
       {% if not (user.id == signedInUser.id) %}
         <p class="govuk-body">
-          <a class="govuk-link app-link--destructive" href="{{ actions.delete }}">Delete user</a>
+          <a class="govuk-link app-link--destructive" href="{{ actions.delete }}">Remove user</a>
         </p>
       {% endif %}
 
