--- a/app/views/users/delete.njk
+++ b/app/views/users/delete.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "users" %}
 
-{% set title = "Are you sure you want to delete this user?" %}
+{% set title = "Are you sure you want to remove this user?" %}
 {% set caption = user.firstName + " " + user.lastName %}
 
 {% block pageTitle %}
@@ -33,7 +33,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Delete user",
+          text: "Remove user",
           classes: "govuk-button--warning"
         }) }}
 
