--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -37,7 +37,7 @@
         <ul class="govuk-list">
           {% for location in course.locations %}
             <li>
-              {{ location.id | getLocationLabel }}
+              {{ location.id | getLocationLabel(organisation.id) }}
             </li>
           {% endfor %}
         </ul>
