Add guidance link to footer

--- a/app/views/_includes/footer.njk
+++ b/app/views/_includes/footer.njk
@@ -42,6 +42,9 @@
     title: "Get help",
     html: helpHtml,
     items: [{
+      href: "/guidance",
+      text: "Guidance"
+    }, {
       href: "#",
       text: "Accessibility"
     }, {
