Add markdown styles

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -29,6 +29,7 @@ $git-brand-colour: #159964;
 @import "core/filter-layout";
 @import "core/header";
 @import "core/links";
+@import "core/markdown";
 @import "core/table";
 @import "core/tag";
 
