Add academic year hint

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -48,6 +48,11 @@
           </ul>
         {% endset %}
 
+        {% set courseStartHtml %}
+          <p class="govuk-body">{{ course.startDate | date("MMMM yyyy") }}</p>
+          <p class="govuk-hint">{{ course.startDate | getAcademicYearLabel }}</p>
+        {% endset %}
+
         {{ govukSummaryList({
           rows: [
             {
@@ -276,7 +281,7 @@
                 text: "Course start"
               },
               value: {
-                text: course.startDate | date("MMMM yyyy")
+                html: courseStartHtml
               },
               actions: {
                 items: [
