--- a/app/views/locations/delete.njk
+++ b/app/views/locations/delete.njk
@@ -2,7 +2,12 @@
 
 {% set primaryNavId = "locations" %}
 
-{% set title = "Are you sure you want to delete this location?" %}
+{% if hasCourses %}
+  {% set title = "You cannot remove this location" %}
+{% else %}
+  {% set title = "Are you sure you want to remove this location?" %}
+{% endif %}
+
 {% set caption = location.name %}
 
 {% block beforeContent %}
@@ -23,10 +28,19 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        {{ govukButton({
-          text: "Delete location",
-          classes: "govuk-button--warning"
-        }) }}
+        {% if hasCourses %}
+
+          <p class="govuk-body">{{ location.name }} is a location for courses run by {{ organisation.name }}.</p>
+          <p class="govuk-body">To remove {{ location.name }}, you must first remove the location for those courses.</p>
+
+        {% else %}
+
+          {{ govukButton({
+            text: "Remove location",
+            classes: "govuk-button--warning"
+          }) }}
+
+        {% endif %}
 
       </form>
 
