--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "locations" %}
 
-{% if location %}
+{% if referrer == "change" %}
   {% set title = location.name %}
 {% else %}
   {% set title = "Add location" %}
@@ -44,82 +44,14 @@
             text: "Unique reference number (URN)",
             classes: "govuk-label--s"
           },
-          hint: {
-            html: 'Find URNs on <a href="https://www.get-information-schools.service.gov.uk/" target="_blank">Get information about schools (opens in new tab)</a>'
-          },
           errorMessage: errors | getErrorMessage("location-urn"),
           value: location.urn
         }) }}
 
-        {% call govukFieldset({
-          legend: {
-            text: "Address",
-            classes: "govuk-fieldset__legend--m",
-            isPageHeading: false
-          }
-        }) %}
-
-          {{ govukInput({
-            id: "address-line-1",
-            name: "location[address][addressLine1]",
-            label: {
-              html: 'Building and street <span class="govuk-visually-hidden">line 1 of 2</span>'
-            },
-            autocomplete: "address-line1",
-            errorMessage: errors | getErrorMessage("address-line-1"),
-            value: location.address.addressLine1
-          }) }}
-
-          {{ govukInput({
-            id: "address-line-2",
-            name: "location[address][addressLine2]",
-            label: {
-              html: '<span class="govuk-visually-hidden">Building and street line 2 of 2</span>'
-            },
-            autocomplete: "address-line1",
-            errorMessage: errors | getErrorMessage("address-line-2"),
-            value: location.address.addressLine2
-          }) }}
-
-          {{ govukInput({
-            id: "address-town",
-            name: "location[address][town]",
-            label: {
-              text: "Town or city"
-            },
-            classes: "govuk-!-width-two-thirds",
-            autocomplete: "address-level2",
-            errorMessage: errors | getErrorMessage("address-town"),
-            value: location.address.town
-          }) }}
-
-          {{ govukInput({
-            id: "address-county",
-            name: "location[address][county]",
-            label: {
-              text: "County"
-            },
-            classes: "govuk-!-width-two-thirds",
-            errorMessage: errors | getErrorMessage("address-county"),
-            value: location.address.county
-          }) }}
-
-          {{ govukInput({
-            id: "address-postcode",
-            name: "location[address][postcode]",
-            label: {
-              text: "Postcode"
-            },
-            classes: "govuk-input--width-10",
-            autocomplete: "postal-code",
-            errorMessage: errors | getErrorMessage("address-postcode"),
-            value: location.address.postcode
-          }) }}
-
-        {% endcall %}
+        <p class="govuk-body govuk-!-margin-bottom-7">Find URNs on <a class="govuk-hint" href="https://www.get-information-schools.service.gov.uk/" target="_blank">Get information about schools (opens in new tab)</a></p>
 
         {{ govukButton({
-          text: "Update location" if location else "Add location"
+          text: "Update location" if referrer == "change" else "Continue"
         }) }}
 
       </form>
