Update layout and content on about course page

--- a/app/views/courses/about-course.njk
+++ b/app/views/courses/about-course.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "About this course" %}
+{% set title = "Course information" %}
 {% set caption = course.name + " (" + course.code + ")" %}
 
 {% block pageTitle %}
@@ -23,9 +23,31 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% set headingHtml %}
-        {% include "_includes/page-heading.njk" %}
-      {% endset %}
+      {% include "_includes/page-heading.njk" %}
+
+      <p class="govuk-body">Use the sections below to help candidates decide if this is the right course for them.</p>
+
+      <h2 class="govuk-heading-m">Course summary</h2>
+
+      <p class="govuk-body">Candidates often browse several courses at once, so it’s important that they can quickly find out why this course is different from another</p>
+      <p class="govuk-body">Use this section to introduce the course. Tell candidates:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>what makes this course distinctive</li>
+        <li>where they’ll spend their time</li>
+        <li>how the course is structured</li>
+        <li>how they’ll be supported - for example, tutors and mentoring</li>
+      </ul>
+
+      <p class="govuk-body">Remember to:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>avoid too much detail - you can use the other sections to elaborate</li>
+        <li>use bullet points and paragraphs of no more than five sentences to make your content easy to 'scan'</li>
+        <li>spell out acronyms the first time you use them, for example, ITT, NQT, SCITT</li>
+      </ul>
+
+      <p class="govuk-body">For more guidance and course summary examples, <a href="https://docs.google.com/document/d/1sTUfy-zA55qcGAxw2B7YtgZro0F7_OiJqyflw71osRA/edit#">visit writing descriptions for Publish teacher training courses</a>.</p>
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
@@ -33,51 +55,13 @@
           id: "about-course",
           name: "course[aboutCourse]",
           rows: 20,
-          maxwords: 400,
+          maxwords: 200,
           label: {
-            html: headingHtml
+            text: "Course summary",
+            classes: ['govuk-label--s']
           },
           errorMessage: errors | getErrorMessage("about-course"),
           value: course.aboutCourse
-        }) }}
-
-        {% set helpTextHtml %}
-          <p class="govuk-body">Give candidates a short summary of the course to help them decide if it’s right for them.</p>
-
-          <p class="govuk-body">Provide information like:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>what they’ll learn (for example, what units are taught)</li>
-            <li>how the course is structured</li>
-            <li>whether it has any distinctive features</li>
-          </ul>
-
-          <p class="govuk-body">You could include details such as:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>how candidates are assessed</li>
-            <li>the size of the workload (for example, how many essays per term)</li>
-            <li>league-table rankings and student employability ratings</li>
-            <li>quotes from past students</li>
-          </ul>
-
-          <p class="govuk-body">Remember to:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>use short paragraphs (no more than five sentences each)</li>
-            <li>use bullet points where possible (to check formatting, use the ‘preview’ function after saving your content)</li>
-            <li>spell out all acronyms the first time you use them, for example, ITT, NQT, EAL, ICT (candidates may not be familiar with these terms)
-            </li>
-          </ul>
-
-          <p class="govuk-body">Several courses in the same subject?</p>
-
-          <p class="govuk-body">If you offer more than one course in the same subject, such as two Primary courses, it’s important to say how they differ (for example, differences in teaching placements or in the focus of the training). Otherwise, candidates may be unable to decide between them.</p>
-        {% endset %}
-
-        {{ govukDetails({
-          summaryText: "Help with about this course",
-          html: helpTextHtml
         }) }}
 
         {{ govukButton({
